<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<ScrollView android:layout_width="fill_parent"
		android:layout_height="0dip" android:layout_weight="1">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:orientation="vertical"
			android:padding="10dip">

			<TextView android:id="@+id/execution_person" style="@android:style/TextAppearance.Large"
				android:layout_height="wrap_content" android:layout_width="wrap_content" 
				android:layout_marginBottom="5dip"/>

			<TextView android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/account_label" />

			<Spinner android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:prompt="@string/account_label"
				android:id="@+id/execution_popup_editor_account_spinner"></Spinner>

			<TextView android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/expression_label" />

			<EditText android:id="@+id/execution_popup_editor_expression"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:inputType="textMultiLine" android:lines="3" android:gravity="top"
				android:maxLines="3">
			</EditText>

		</LinearLayout>

	</ScrollView>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="@android:color/darker_gray"
		android:layout_gravity="center_horizontal" android:minHeight="54dip"
		android:paddingTop="4dip" android:paddingLeft="2dip"
		android:paddingRight="2dip">

		<Button android:id="@+id/ok_button" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:minWidth="100dip"
			android:text="@string/execution_popup_editor_ok_button"
			android:layout_weight="1" android:onClick="saveExecution" />

		<Button android:id="@+id/cancel_button" android:layout_width="wrap_content"
			android:minWidth="100dip" android:layout_height="wrap_content"
			android:onClick="closeExecution" android:layout_weight="1"
			android:text="@string/execution_popup_editor_cancel_button" />

	</LinearLayout>

</LinearLayout>